--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hat": "^0.0.3",
     "js-yaml": "^4.1.0",
     "knex": "^2.4.2",
     "lodash": "^4.17.21",
+    "luxon": "^3.2.1",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "speakeasy": "^2.0.0",
+    "sqlite3": "^5.1.4"
   }
 }
