--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extensions for node.js + express to have role based authorization",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests/database.test.js"
   },
   "author": "Anton Schegg",
   "license": "ISC",
