--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Anton Schegg",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
@@ -31,6 +32,9 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
