eslint settings Zusätzliche Systemtabelle für Preferences

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
     "ecmaVersion": 13
   },
   "rules": {
-    "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
+    "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"],
+    "no-underscore-dangle": ["error", { "allow": ["bar_", "_foo"] }],
+    "import/extensions": ["error", "never", { "js": "always" }]
   }
 }
